--- a/src/PortfolioContainer/Home/Home.css
+++ b/src/PortfolioContainer/Home/Home.css
@@ -1,7 +1,7 @@
-.home-container{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    min-height: 670px;
-    background-image: url(../../assets/Home/bg.jpg);
+.home-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 670px;
+  background-color: rgb(29, 33, 72);
 }
